Use hierarchical URIs; URL("file", "", "dir").toURI() does *not* result in a URI valid for File(URI) ctor, results in IllegalArugmentException